--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --mode development --open",
     "build": "webpack --mode production",
-    "tscw": "tsc --watch"
+    "tscw": "tsc --watch",
+    "tailwind": "npx tailwindcss -i ./src/style.css -o ./dist/style.css --watch",
+    "deploy-ghpage":"npm run build && node ./deploy/ghpages.ts"
   },
   "keywords": [
     "typescript",
@@ -16,10 +18,14 @@
   "author": "Maximilian Schwarzmüller",
   "license": "ISC",
   "devDependencies": {
+    "gh-pages": "^4.0.0",
+    "tailwindcss": "^3.1.6",
     "ts-loader": "^9.3.1",
     "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
+    "css-loader": "^6.7.1",
+    "style-loader": "^3.3.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
   }
